Fixed issue selecting non-intersecting VTS. Fixed var not declared "vtsAreas". Changed Cancel msg to "Save and Cancel" while in VTS form, and to "Cancel" when no VTS selected. Added ETA from route to VTS form, case for no route as well. Refactored VTS center contact details Changed mouseover highlight of VTS areas to be dynamically transparent at closer zoom. Added click popup on map of vts areas with option to open report form Made refresh of browser reopen report form if was open at refresh Popup does not work if zoom is more than 13 Clicking on map now collapses sidemenu, clicking menu item uncollapses Fixed responsive issue of sidemenu with UI people

--- a/src/main/webapp/style/balticweb.css
+++ b/src/main/webapp/style/balticweb.css
@@ -68,24 +68,6 @@ body {
     -o-background-size: cover;
     background-size: cover;
 }
-.maritimeweb-sidebar {
-    position: absolute;
-    top: 51px;
-    bottom: 3%;
-    right: 24px;
-    margin: 1em;
-    z-index: 300;
-    height: 75%;
-    background-color: white ;
-
-    border-radius: 4px;
-    padding: 4px;
-    overflow-y: scroll;
-
-    opacity: 0.90;
-    border: 1px #269 solid;
-
-}
 
     /* Vessel Traffic Service */
 
@@ -419,6 +401,35 @@ body {
 
 
     /* END Vessel Traffic Service */
+
+
+.maritimeweb-sidebar {
+    position: absolute;
+    min-width: 240px;
+    top: 51px;
+    bottom: 3%;
+    right: 24px;
+    margin: 1em;
+    z-index: 300;
+    height: 75%;
+    background-color: white ;
+    border-radius: 4px;
+    padding: 4px;
+    overflow-y: scroll;
+    opacity: 0.90;
+    border: 1px #269 solid;
+}
+
+.sidebar-minimized{
+    height:105px !important;
+}
+
+@media screen and (max-width: 768px) {
+    .sidebar-minimized{
+        height:300px !important;
+
+    }
+}
 
 .sidebar-panel {
     padding: 10px 5px;
@@ -935,6 +946,7 @@ Making room for the beta ribbon banner
 */
 .navbar-brand{
     padding-left: 41px;
+    cursor: pointer;
 }
 /*
 beta ribbon banner in pure css
